<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyAlbums</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_album_editer">AlbumEditer</string>
    <string name="enter_location">Enter Location</string>
    <string name="location">Location</string>
    <string name="enter_date">Enter Date</string>
    <string name="date">Date</string>
    <string name="enter_description">Enter Description</string>
    <string name="description">Description</string>
    <string name="album_name">Album Name</string>
    <string name="enter_new_name">Enter New Name</string>
    <string name="next">Next</string>
    <string name="title_activity_add_picture">AddPicture</string>
    <string name="upload_from_gallery">Upload from gallery</string>
    <string name="login">Login</string>
    <string name="my_albums">My Albums</string>
    <string name="new_album">New Album</string>
    <string name="take_a_picture">Take a Picture</string>

</resources>
