<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AlbumEditer" >


    <TextView
        android:id="@+id/AlbumName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:text="@string/album_name" >
    </TextView>

    <EditText
        android:id="@+id/AlbumNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/AlbumName"
        android:layout_toRightOf="@id/AlbumName"
        android:hint="@string/enter_new_name"
        android:inputType="text" >
    </EditText>

    <TextView
        android:id="@+id/Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/AlbumName"
        android:paddingTop="30dp"
        android:text="@string/description" >
    </TextView>

    <EditText
        android:id="@+id/DescriptionInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/Description"
        android:layout_toRightOf="@id/Description"
        android:hint="@string/enter_description"
        android:inputType="text" >
    </EditText>

    <TextView
        android:id="@+id/Date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Description"
        android:paddingTop="30dp"
        android:text="@string/date" >
    </TextView>

    <EditText
        android:id="@+id/DateInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/Date"
        android:layout_toRightOf="@id/Date"
        android:hint="@string/enter_date"
        android:inputType="date" >
    </EditText>

    <TextView
        android:id="@+id/Location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/Date"
        android:paddingTop="30dp"
        android:text="@string/location" >
    </TextView>

    <EditText
        android:id="@+id/LocationInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/Location"
        android:layout_toRightOf="@id/Location"
        android:hint="@string/enter_location"
        android:inputType="text" >
    </EditText>

    <Button
        android:id="@+id/EditAlbumNextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_below="@id/Location"
        android:layout_alignLeft="@id/Location"
        android:layout_marginTop="85dp" 
        android:onClick="OnClickAddPicture"/>

</RelativeLayout>